# ultimate-octo-system

./: .gitignore  CMakeLists.txt  README.md  eurobot-vision  eurobot-vision.cpp  main.cpp  makefile  slave.c
Camera/: Camera.cpp  Camera.hpp
Color/: Color.cpp  Color.hpp
ColorMask/: ColorMask.cpp  ColorMask.hpp
ColorTracking/: ColorTracking.cpp  ColorTracking.hpp
Contouring/: Contouring.cpp  Contouring.hpp
Perspective/: Perspective.cpp  Perspective.hpp
ShapeDetection/: ShapeDetection.cpp  ShapeDetection.hpp
ShapeDetectionTest/: test.cpp
TrapezeDetection/: TrapezeDetection.cpp  a.out  trapeze
